--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
